# django-based

.devcontainer/: devcontainer.json
server/: .env  .gitignore  Dockerfile  README.md  biome.json  db.sqlite3  docker-compose.yml  justfile  manage.py  mise.toml  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  ruff.toml  tailwind.config.js  test
server/apps/chat/: apps.py  consumers.py  routing.py  urls.py  views.py
server/apps/users/: apps.py
server/apps/users/migrations/: 0001_initial.py
server/core/: asgi.py  urls.py  wsgi.py
server/core/settings/: settings.py
server/static/pages/css/: base.css
server/staticfiles/: staticfiles.json
server/staticfiles/pages/css/: base.css.br  base.dffd3ae81cb6.css
server/staticfiles/pages/css/src/: styles.0a0601f17c52.css  styles.css.br
server/staticfiles/users/js/: htmx.min.js.br
server/templates/: 403_csrf.html  404.html  500.html  _base.html  _base_chat.html  _footer.html  _header.html
server/templates/account/: login.html  signup.html
server/templates/chat/: chat-irc.html  single_chat.html  temp.html
server/templates/chat/ws/: chat_message.html
server/templates/pages/: about.html  blogs.html  home.html  test  test.html  test.js  test2.html
server/theme/templates/: base.html
