[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Song Khoi", email = "songkhoi123@gmail.com" }]
keywords = ["django", "tailwindcss", "htmx", "alpinejs"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Framework :: Django :: 5.1",
]
dependencies = [
    "django-allauth>=64.0.0",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar>=4.4.6",
    "whitenoise>=6.7.0",
    "psycopg2-binary>=2.9.9",
    "crispy-bootstrap5>=2024.2",
    "django>=5.1",
    "django-tailwind>=3.8.0",
    "django-browser-reload>=1.13.0",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.5.6",
    "cookiecutter>=2.6.0",
]
