[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Song Khoi", email = "songkhoi123@gmail.com" }]
keywords = ["django", "tailwindcss", "htmx", "alpinejs"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Framework :: Django :: 5.1",
]
dependencies = [
    "django-allauth>=64.0.0",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar>=4.4.6",
    "whitenoise[brotli]>=6.7.0",
    "psycopg2-binary>=2.9.9",
    "crispy-bootstrap5>=2024.2",
    "Django>=5.1",
    "django-tailwind>=3.8.0",
    "django-browser-reload>=1.13.0",
    "python-dotenv>=1.0.1",
    "crispy-tailwind>=1.0.3",
    "django-htmx>=1.19.0",
    "django-widget-tweaks>=1.5.0",
    "types-python-dateutil>=2.9.0.20240316",
    "text-unidecode>=1.3",
    "charset-normalizer>=3.3.2",
    "urllib3>=2.2.2",
    "tzdata>=2024.1",
    "typing_extensions>=4.12.2",
    "sqlparse>=0.5.1",
    "six>=1.16.0",
    "PyYAML>=6.0.2",
    "python-slugify>=8.0.4",
    "PyJWT>=2.9.0",
    "Pygments>=2.18.0",
    "pycparser>=2.22",
    "psycopg-binary>=3.2.1",
    "packaging>=24.1",
    "oauthlib>=3.2.2",
    "mdurl>=0.1.2",
    "MarkupSafe>=2.1.5",
    "idna>=3.7",
    "defusedxml>=0.7.1",
    "colorama>=0.4.6",
    "chardet>=5.2.0",
    "certifi>=2024.7.4",
    "asgiref>=3.8.1",
    "requests>=2.32.3",
    "python3-openid>=3.2.0",
    "python-dateutil>=2.9.0.post0",
    "psycopg>=3.2.1",
    "markdown-it-py>=3.0.0",
    "Jinja2>=3.1.4",
    "gunicorn>=23.0.0",
    "click>=8.1.7",
    "cffi>=1.17.0",
    "binaryornot>=0.4.4",
    "rich>=13.7.1",
    "requests-oauthlib>=2.0.0",
    "cryptography>=43.0.0",
    "arrow>=1.3.0",
    "channels>=4.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.5.6",
    "cookiecutter>=2.6.0",
]
